- [BUG FIX] Modify dateArrayFromFMDate method of DataConverter_FMDateTime class to fix compatibility with PHP 5.2.
- [BUG FIX] Correct the confirmation message when clicking the deleting record button on the navigation bar.
  (Thanks to Kentaro Suzuki).
- [BUG FIX] The delete button on the navigation bar works correctly when specifying INTERMediator.pagedSize = 1.

Ver.4.0 (2013/12/4)
- File hierarchy changed for easily involving the pulled sources into developing web apps
- Modify FX.php to fix compatibility with FileMaker Server 13.
- Also updates below from Ver.3.0

Ver.4 (2013/12/4)=========================================================

[Major differences from Ver.3]
- [INFO] INTER-Mediator requires FileMaker Server 10 or later, OS X v10.6 or later if using FileMaker Server.
- FileMaker Server 13 supported with the XML sharing.
- Support FileMaker's portal objects (by specifying 'relation' => array('portal' => true) ).
- Enable omitting to place the primary key field object on a layout when using FileMaker Server
  (by specifying 'key' => '-recid').
- The definition file editor works reading/writing. You can call it at the start of logs on debug mode.
- Authentication user interface is improved.
- The 'issuedhash' table for storing challenges of authentication can be use another database.
- Post only page could be made without any programmings.
- Bridge for JavaScript Components is added. The HTML editor tinyMCE and original File Uploader are supported.
- Support the FileMaker's checkbox set feature.
- Support displaying of the FileMaker's container fields.
- Started CI!
===========================================================================

Ver.3.11 (2013/11/30)
- The code editor "codemirror" is supported. See Sample_webpage folder.
- INTERMediator.pagedSize can be changeable when specifying 'records' key and 'maxrecords' key in a definition file
  (for example: array('records' => 10, 'maxrecords' => 10) ).